--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,8 @@ body {
     text-wrap: balance;
   }
 }
+
+/* styles/globals.css */
+.input-rounded-bottom {
+  border-radius: 0 0 0.375rem 0.375rem; /* Ajuste o valor conforme necessário */
+}
